# scopy

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .gitmodules  .mcp.json  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Info.plist.cmakein  QT6_dependencies.md  README.md  ToolStateChart.scxml  _toctree.html  addcontextordemoinfopage.cpp  addcontextordemoinfopage.h  addcontextordemoinfopage.ui  appveyor.yml  azure-pipelines-cache-logic.yml  azure-pipelines.yml  build.sh  build_appveyor_mingw.sh  build_appveyor_ubuntu.sh  config.h.cmakein  contextbrowseritem.cpp  contextbrowseritem.h  contextbrowseritem.ui  contextmanager.cpp  contextmanager.h  contextmanagermenu.cpp  contextmanagermenu.h  contextmanagermenu.ui  contextprovider.cpp  contextprovider.h  contextscanner.cpp  contextscanner.h  device.cpp  device.h  devicebrowser.cpp  devicebrowser.h  (+69 more)
core/: CMakeLists.txt  ScopyContext.h  contextprovider.h  device.h  devicebrowser.cpp  devicebrowser.h  deviceicon.h  deviceiconbuilder.h  deviceiconimpl.h  deviceimpl.cpp  deviceimpl.h  devicemanager.cpp  devicemanager.h  devicepage.cpp  devicepage.h  devicepage.ui  devicepagebuilder.h  iiocontextscanner.h  iiocontextscannerthread.cpp  iiocontextscannerthread.h  infopagestack.h  logging_categories.h  main.cpp  mapstackedwidget.cpp  mapstackedwidget.h  plugin.cpp  plugin.h  scanbuttoncontroller.h  scannediiocontextcollector.cpp  scannediiocontextcollector.h  scopyhomeaddpage.h  scopyhomeaddpage.ui  scopyhomeinfopage.h  scopyhomepage.cpp  scopyhomepage.h  scopymainwindow.cpp  scopymainwindow.h  scopymainwindow.ui  testplugin.cpp  testplugin.h  (+11 more)
core/doc/: core.qmodel  device_lifecycle.qmodel  pkg_installer.qmodel  toolmenu.qmodel  toolmenu_2.qmodel  toolmenu_activity.qmodel
core/src/: api_object.cpp  application_restarter.cpp  browsemenu.cpp  cmdlinehandler.cpp  context_enumerator.cpp  crashreport.cpp  detachedtoolwindow.cpp  detachedtoolwindowmanager.cpp  deviceautoconnect.cpp  devicebrowser.cpp  devicefactory.cpp  deviceiconbuilder.cpp  deviceiconimpl.cpp  deviceimpl.cpp  deviceloader.cpp  devicemanager.cpp  devicepage.cpp  devicepagebuilder.cpp  emuutils.cpp  emuwidget.cpp  iiodeviceimpl.cpp  iiotabwidget.cpp  infopage.cpp  infopagestack.cpp  license_overlay.cpp  licenseoverlay.cpp  logging_categories.cpp  mapstackedwidget.cpp  pkggridwidget.cpp  pkginstalledtab.cpp  pkginstaller.cpp  pkgitemwidget.cpp  pkgmanager.cpp  pkgpreviewpage.cpp  pkgutil.cpp  pkgwidget.cpp  pkgzipwidget.cpp  pluginenablewidget.cpp  pluginentry.cpp  pluginfilter.cpp  (+32 more)
core/test/: CMakeLists.txt  testPluginExcludeLower.json  testPluginExcludeSpecificLower.json  testPluginExcludeSpecificUpper.json  testPluginExcludeUpper.json  testplugin.json  testpluginexclude.json  testpluginexclude2.json  tst_pluginmanager.cpp  tst_pluginrepository.cpp  tst_translationsrepository.cpp
core/ui/: devicebrowser.ui  devicebutton.ui  devicepage.ui  emuwidget.ui  iiotabwidget.ui  licensedialogoverlay.ui  scopyhomeaddpage.ui  scopyhomeinfopage.ui  scopyhomepage.ui  scopymainwindow.ui  toolbrowser.ui
data-sink/: CMakeLists.txt
data-sink/src/: blockManager.cpp  customFilterBlocks.cpp  customSourceBlocks.cpp  filterBlock.cpp  proxyblock.cpp  scaleoffsetfilter.cpp  signalpath.cpp  sourceBlock.cpp  timechannelsigpath.cpp
data-sink/test/: CMakeLists.txt  tst_blockmanager.cpp
gr-util/: CMakeLists.txt
gr-util/src/: attrfactory.cpp  attrwidget.cpp  genalyzer_impl.cpp  grdeviceaddon.cpp  grfftfloatproxy.cpp  griiocomplexchannelsrc.cpp  griiodevicesource.cpp  griiofloatchannelsrc.cpp  grlogforward.cpp  grproxyblock.cpp  grscaleoffsetproc.cpp  grsignalpath.cpp  grsignalsrc.cpp  grtimechanneladdon.cpp  grtimeplotaddon.cpp  grtimeplotaddonsettings.cpp  grtopblock.cpp  measure.cpp  measurementcontroller.cpp  time_sink_f_impl.cc  time_yautoscale.cpp  time_ycontrol.cpp  timechanneladdon.cpp
gr-util/test/: CMakeLists.txt  tst_grblocks.cpp
gui/: CMakeLists.txt  animationmanager.h  basemenu.cpp  basemenu.ui  basemenuitem.h  coloredQWidget.cpp  coloredQWidget.h  customPushButton.cpp  customPushButton.h  customSwitch.cpp  customanimation.cpp  customanimation.h  dynamicWidget.h  homepage_controls.cpp  homepage_controls.h  qtgui_util.cc  scopygui_export.h  smallOnOffSwitch.cpp  smallOnOffSwitch.h  utils.h
gui/gr-gui/: CMakeLists.txt
gui/res/: generate.py  infoPageMap.json  resources.qrc
gui/resources/: resources.qrc
gui/sigrok-gui/: CMakeLists.txt
gui/src/: BasicPlot.cpp  ComboBoxLineEdit.cpp  ConstellationDisplayPlot.cc  DisplayPlot.cc  FftDisplayPlot.cc  HistogramDisplayPlot.cc  TimeDomainDisplayPlot.cc  WaterfallDisplayPlot.cc  animationmanager.cpp  animationpushbutton.cpp  annotation_curve.cpp  annotationcurve.cpp  annotationdecoder.cpp  application_restarter.cpp  application_restarter.hpp  autoScaler.cpp  average.cpp  axishandle.cpp  base_menu.cpp  base_menu_item.cpp  basemenu.cpp  basemenuitem.cpp  basicscaledraw.cpp  basictracker.cpp  bitfield_widget.cpp  boundedplotzoomer.cpp  buffer_previewer.cpp  channel_manager.cpp  channel_settings.cpp  channel_widget.cpp  channelcomponent.cpp  checkbox_delegate.cpp  checkbox_delegate.hpp  coloredQWidget.cpp  colored_qwidget.cpp  comboBox_lineEdit.cpp  completion_circle.cpp  completion_circle.hpp  connect_dialog.cpp  cursor.cpp  (+190 more)
gui/style/: README.md
gui/test/: CMakeLists.txt
gui/tests/: run_single_widget_unittest.cpp  spinbox_unittest.cpp  testgui.cpp
gui/ui/: base_menu.ui  base_menu_item.ui  basemenu.ui  bitfield_widget.ui  channel.ui  channel_settings.ui  channel_widget.ui  connect_dialog.ui  cursor_readouts.ui  cursors_settings.ui  custom_menu_button.ui  custom_plot_position_button.ui  customplotpositionbutton.ui  db_click_buttons.ui  homepage_controls.ui  info_widget.ui  instrument_notes.ui  logic_analyzer_channel_menu.ui  logic_analyzer_general_menu.ui  logic_analyzer_menu.ui  logic_analyzer_trigger_menu.ui  (+39 more)
iio-widgets/: CMakeLists.txt
iioutil/: CMakeLists.txt  IIOController_Implementation_Plan.md
plugins/: CMakeLists.txt  index.html
tests/: CMakeLists.txt  index.html  test_report.html  testing_guide.html
(+5975 files in other folders)
